<resources>
    <string name="app_name">Roady</string>

    <string name="title_activity_start">Dashboard</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_driving_session_after">Add Driving Session</string>
    <string name="title_activity_settings_backend">Settings</string>
    <string name="title_activity_dbbackend">DBBackend</string>


    <string name="lable_addnew">Start Driving</string>
    <string name="lable_addold">Add Driving Session</string>
    <string name="label_statistics">Statistics</string>
    <string name="label_stop_watch">New Driving Session</string>
    <string name="label_export">Export</string>
    <string name="label_settings">Settings</string>
    <string name="label_new_driving_session">New Driving Session</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="achievement">Achievements</string>
    <string name="export">Export</string>


    <string name="user_name_label">Name</string>
    <string name="driven_km_label">Already Driven</string>
    <string name="goal_km_label">Goal</string>
    <string name="achievements_user_created_label">Personal Achievements</string>
    <string name="achievements_user_created_name">New Achievement</string>
    <string name="achievements_user_created_km">km</string>
    <string name="co_driver_label">Co-Drivers</string>
    <string name="co_driver_name">New Co-Driver</string>
    <string name="car_label">Cars</string>
    <string name="push_label">Push Notifications</string>
    <string name="car_kfz">KFZ</string>
    <string name="car_name">New Car</string>
    <string name="save_settings">Save Settings</string>
    <string name="title_activity_achievements">Achievements</string>
    <string name="textview_achievements_all">All</string>
    <string name="textview_achievements_recent">Most recent</string>
    <string name="achievements_hidden">Hidden</string>
    <string name="achievements_recent_title">Aww…</string>
    <string name="achievements_recent_description">You have not achieved anything yet</string>
    <string name="stats">Statistics</string>
    <string name="export_empty_filename">Filename cannot be empty!</string>
    <string name="export_no_driving_sessions">There are no driving sessions!</string>

    <string-array name="Weather">
        <item>Dry</item>
        <item>Rain</item>
        <item>Snow</item>
        <item>Ice</item>
    </string-array>
    <string-array name="RoadConditions">
        <item>Free</item>
        <item>Crowded</item>
        <item>Roadworks</item>
        <item>Accident</item>
    </string-array>

    <string name="title_activity_new_driving_session">NewDrivingSession</string>
    <string name="title_activity_push">PushActivity</string>

    <string name="timepush_title">Long time no drive</string>
    <string name="timepush_body">Your last drive is more than one week ago!</string>
    <string name="activepush_title">Are you still driving?</string>
    <string name="activepush_body">You started driving more than eight hours ago.</string>
    <string name="title_activity_welcome">WelcomeActivity</string>

    <string name="user_generated_push_title">New controll Point</string>


    <string name="wrong_input">Name, goal kilometers or driven kilometers are wrong</string>
    <string name="title_activity_export">ExportActivity</string>
    <string name="settings_name">Name</string>
    <string name="driving_session_afterwards_mileage">Mileage</string>
    <string name="km">km</string>
    <string name="driving_session_after_end">End</string>
    <string name="driving_session_after_start">Start</string>
    <string name="driving_session_after_weather">Weather</string>
    <string name="driving_session_after_road_condition">Road condition</string>
    <string name="driving_session_after_save">Save</string>
    <string name="driving_session_after_codriver">CoDriver</string>
    <string name="driving_session_after_vehicle">Vehicle</string>
    <string name="driving_session_after_time">Time</string>
    <string name="driving_session_after_date">Date</string>
    <string name="driving_session_after_date_and_time">Date and Time</string>
    <string name="driving_session_after_route">Route</string>


</resources>
