<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.thestreetcodecompany.roady.SettingsBackend"
    tools:showIn="@layout/content_settings">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:text="@string/settings_name"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/user_name_label"
                    android:textColor="@android:color/black" />

            </LinearLayout>

            <View
                android:id="@+id/divider1"
                android:layout_width="40dp"
                android:layout_height="1dp"
                android:layout_margin="6dp"
                android:background="?android:attr/listDivider"
                android:visibility="invisible" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/driving_session_afterwards_mileage"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/drivenKmLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/driven_km_label"
                        android:layout_weight="1"
                        android:textColor="@android:color/black" />

                    <EditText
                        android:id="@+id/drivenKm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="number|numberDecimal"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/mileageDrivenKM"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/km"
                        android:textColor="@android:color/black" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/goalKmLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/goal_km_label"
                        android:layout_weight="1"
                        android:textColor="@android:color/black" />

                    <EditText
                        android:id="@+id/goalKm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="number|numberDecimal"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/mileageGoalKM"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/km"
                        android:textColor="@android:color/black" />

                </LinearLayout>
            </LinearLayout>


            <View
                android:id="@+id/divider2"
                android:layout_width="40dp"
                android:layout_height="1dp"
                android:layout_margin="6dp"
                android:background="?android:attr/listDivider"
                android:visibility="invisible" />


            <TextView
                android:id="@+id/achievementsUserCreatedLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/achievements_user_created_label"
                android:textSize="18sp"
                android:textColor="@android:color/black" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ListView
                    android:id="@+id/achievementsUserCreatedList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="horizontal">

                </ListView>
            </RelativeLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_weight="1" />

            <LinearLayout
                android:id="@+id/newAchievement"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:padding="5dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="0.85"
                    android:layout_height="70dp">

                    <EditText
                        android:id="@+id/achievementsUserCreated"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:hint="@string/achievements_user_created_name"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                    <EditText
                        android:id="@+id/achievementsUserCreatedKm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.45"
                        android:ems="10"
                        android:layout_marginLeft="10dp"
                        android:inputType="textPersonName"
                        android:hint="100.0"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                </LinearLayout>

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/achievementUserCreatedAdd"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="0.15"
                    android:layout_marginLeft="7dp"
                    android:clickable="true"
                    android:tint="@android:color/background_light"
                    app:backgroundTint="@color/colorPrimaryDark"
                    app:srcCompat="@android:drawable/ic_input_add" />
            </LinearLayout>


            <View
                android:id="@+id/divider3"
                android:layout_width="40dp"
                android:layout_height="1dp"
                android:layout_margin="6dp"
                android:background="?android:attr/listDivider"
                android:visibility="invisible" />


            <TextView
                android:id="@+id/coDriverLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/co_driver_label"
                android:textSize="18sp"
                android:textColor="@android:color/black" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ListView
                    android:id="@+id/coDriverList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="horizontal" />
            </RelativeLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <LinearLayout
                android:id="@+id/newCoDriver"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:padding="5dp"
                app:layout_constraintEnd_toEndOf="parent">

                <EditText
                    android:id="@+id/coDriverName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0.85"
                    android:hint="@string/co_driver_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/coDriverAdd"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="0.15"
                    android:clickable="true"
                    android:tint="@android:color/background_light"
                    app:backgroundTint="@color/colorPrimaryDark"
                    app:srcCompat="@android:drawable/ic_input_add" />

            </LinearLayout>


            <View
                android:id="@+id/divider4"
                android:layout_width="40dp"
                android:layout_height="1dp"
                android:layout_margin="6dp"
                android:background="?android:attr/listDivider"
                android:visibility="invisible" />


            <TextView
                android:id="@+id/carLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/car_label"
                android:textSize="18sp"
                android:textColor="@android:color/black" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ListView
                    android:id="@+id/carList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="horizontal" />
            </RelativeLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <LinearLayout
                android:id="@+id/newCar"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:padding="5dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="0.85"
                    android:layout_height="70dp">

                    <EditText
                        android:id="@+id/carName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.425"
                        android:hint="@string/car_name"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                    <EditText
                        android:id="@+id/carKfz"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.425"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:hint="@string/car_kfz"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                </LinearLayout>

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/carAdd"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="0.15"
                    android:clickable="true"
                    android:tint="@android:color/background_light"
                    app:backgroundTint="@color/colorPrimaryDark"
                    app:srcCompat="@android:drawable/ic_input_add" />

            </LinearLayout>


            <View
                android:id="@+id/divider5"
                android:layout_width="40dp"
                android:layout_height="1dp"
                android:layout_margin="6dp"
                android:background="?android:attr/listDivider"
                android:visibility="invisible" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/push_label"
                android:textSize="18sp"
                android:textColor="@android:color/black" />

            <Switch
                android:id="@+id/switchPush"
                android:layout_width="match_parent"
                android:layout_height="20dp"/>


            <View
                android:id="@+id/divider6"
                android:layout_width="40dp"
                android:layout_height="1dp"
                android:layout_margin="6dp"
                android:background="?android:attr/listDivider"
                android:visibility="invisible" />


            <Button
                android:id="@+id/saveSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:onClick="save_settings"
                android:text="@string/save_settings" />

            <View
                android:id="@+id/dividerBottom"
                android:layout_width="40dp"
                android:layout_height="1dp"
                android:layout_margin="8dp"
                android:background="?android:attr/listDivider"
                android:visibility="invisible" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
